# scanImaging

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
development/NIDAQ_scanner/: galvo_scan_read_test.py  galvo_scan_spad_test.py  interactive_timing_adjustment.py  lag_calibration.py  read_test.py  recalibrate_offline.py  safe_scan_pattern.py  simple_sine_wave_signals.py  test_galvo_scan_patterns.py  test_timing_compensation.py
external_libs/bmc/: pyproject.toml
external_libs/bmc/bmc/: __init__.py
scanImaging/: main.py  main_real.py  main_virtual.py
scanImaging/algorithm/: SimpleZernike.py  dataCoding.py  flimData.py  flimFit.py  signalProcessFunction.py
scanImaging/gui/: dmGui.py  flimViewerGUI.py  scannerBHGUI.py  virtualISMGUI.py
scanImaging/gui/flimViewer/: flimViewer.py
scanImaging/instrument/: DMBmc.py  adaptiveOpticsSequencer.py  bHScannerProcessor.py  bHscanner.py  scannerBHProcessor.py  scannerProcessor.py  scannerProcessorBH.py
scanImaging/instrument/ao_optimizers/: __init__.py  base_optimizer.py  fitting.py  metrics.py  random_search_optimizer.py  sequential_optimizer.py  spgd_optimizer.py
scanImaging/instrument/bHScanner/: bHScanner.py  mousecommand.py
tests/: conftest.py  smoke_main_virtual.py  test_dataCoding.py  test_fitting.py  test_flimFit.py  test_flimViewer.py  test_imports.py  test_instrument.py  test_metrics.py  test_optimizers.py  test_signalProcessFuction.py  test_virtualnstrument.py  test_zernike.py  testingResetFunction.py  testingScript.py  testingScript2.py  verify_flim_lifetime.py
(+8 files in other folders)
