[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name="scanImaging"
version="0.0.1"
dependencies = [pybhspc
        ]
requires-python='>=3.9'
authors = [
        {name = "Ondrej Stranik", email = "ondra.stranik@gmail.com"},
]
description="package to control scanning imaging systems"
readme = "README.md"
license = "MIT"
keywords = ["instrumentation"]
classifiers = [
  "Development Status :: 3- Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
[project.urls]
Repository = "https://github.com/ondrejstranik/scanImaging"
